#000: Poorva: Remove perf specific changes from prod code.